inserida referência para a página de login em todas as páginas.

--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
         .container {
             min-height: 100vh;
             background-image: url('img/produtos.jpg');
-	    background-size: contain;
+	        background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
             background-color: var(--background-fill);            
@@ -18,7 +18,10 @@
     </style>
 </head>
 <body>
-
+    <header class="header"></header>
+        <a href="login.html" class="header__login">Login</a>
+    </header>
+    
     <section class="container">
         <div class="container__caixa">
             <h1 class="container__titulo">Cadastro de Produtos</h1>
