--- a/comunidade.html
+++ b/comunidade.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Comunidades</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700&display=swap">
-    <link rel="stylesheet" href="styles.css"> <!-- Arquivo CSS externo para padronização -->
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parse/3.4.3/parse.min.js"></script>
     <style>
         .container {
             min-height: 100vh;
             background-image: url('img/comunidade.webp');
-	    background-size: contain;
+	        background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
             background-color: var(--background-fill); 
@@ -21,6 +21,9 @@
 </head>
 
 <body>
+    <header class="header">
+        <a href="login.html" class="header__login">Login</a>
+    </header>
 
     <section class="container">
         <div class="container__caixa">
@@ -69,7 +72,7 @@
         }
 
         async function criarComunidade(event) {
-            event.preventDefault(); // Evita o envio padrão do formulário
+            event.preventDefault();
 
             const nome = sanitizeInput(document.getElementById("txtNomeComunidade").value.trim());
             const endereco = sanitizeInput(document.getElementById("txtEnderecoComunidade").value.trim());
