--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             min-height: 100vh;
             padding: 20px;
             background-image: url('img/background.png');
-	    background-size: contain;
+	        background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
             background-color: var(--background-fill);            
@@ -65,6 +65,9 @@
     </style>
 </head>
 <body>
+    <header class="header">
+        <a href="login.html" class="header__login">Login</a>
+    </header>
 
     <section class="container">
         <div class="container__caixa">
