inserção do botão de login na página de coleta

--- a/coleta.html
+++ b/coleta.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Transportadores</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700&display=swap">
-    <link rel="stylesheet" href="styles.css"> <!-- Arquivo CSS externo para padronização -->
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parse/3.4.3/parse.min.js"></script>
     <style>
         .container {
             min-height: 100vh;
             background-image: url('img/Coleta.jpg');
-	    background-size: contain;
+	        background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
             background-color: var(--background-fill);
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+    <header class="header"></header>
+        <a href="login.html" class="header__login">Login</a>
+    </header>
 
     <section class="container">
         <div class="container__caixa">
