ajuste botão login

--- a/coleta.html
+++ b/coleta.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header class="header"></header>
+    <header class="header">
         <a href="login.html" class="header__login">Login</a>
     </header>
 
