--- a/produtos.html
+++ b/produtos.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <header class="header"></header>
+    <header class="header">
         <a href="login.html" class="header__login">Login</a>
     </header>
     
